<resources>
    <string name="app_name">CoffeeBrake3</string>
    <string name="namehint">Name</string>
    <string name="toppings">Toppings:</string>
    <string name="whippedcream">Whipped Cream</string>
    <string name="chocolatetop">Chocolate Top</string>
    <string name="quantity">Quantity:</string>
    <string name="order">Order</string>
    <string name="total">"Total "</string>
    <string name="morethan10cups">You cant order more than 10 cups of coffee</string>
    <string name="lessthan0cups">You cant order less than 0 cups of coffee</string>
    <string name="thankyou">Thank you!</string>
    <string name="True">True</string>
    <string name="False">False</string>
</resources>