<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/green">


    <ImageView
        android:id="@+id/pic"
        android:layout_width="329dp"
        android:layout_height="353dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/coffee" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="290dp"
        android:layout_above="@id/numberofprice"
        android:layout_alignParentRight="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp">

        <LinearLayout
            android:layout_width="160dp"
            android:layout_height="wrap_content"

            android:background="@color/darkgreen"
            android:orientation="vertical">

            <EditText
                android:id="@+id/EdtTxtName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:hint="@string/namehint"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <TextView
                android:text="@string/toppings"
                style="@style/TextStyle"/>


            <CheckBox
                android:id="@+id/chckbx"
                style="@style/CheckBoxStyle"
                android:layout_margin="8dp"
                android:text="@string/whippedcream" />

            <CheckBox
                android:id="@+id/chckbx2"
                style="@style/CheckBoxStyle"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/chocolatetop" />


            <TextView
                android:text="@string/quantity"
                style="@style/TextStyle" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/subs"
                    style="@style/ButtonStyle"
                    android:onClick="substraction"
                    android:text="-" />

                <TextView
                    android:id="@+id/numbofquant"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="0"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/add"
                    style="@style/ButtonStyle"
                    android:onClick="addition"
                    android:text="+" />
            </LinearLayout>

            <Button
                android:id="@+id/orderbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:backgroundTint="@color/gray"
                android:onClick="order"
                android:text="@string/order"
                android:textAllCaps="true"
                android:textColor="@color/black" />


        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/numberofprice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/total"
        android:textSize="30sp"
        android:visibility="invisible" />




</RelativeLayout>